# OpenGeo

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  PROJECT_CHARTER.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  proxy.ts  vercel.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  pmtiles-generator-image.yml  production-smoke.yml
Dev planning documents/: research.md
app/: globals.css  layout.tsx  page.tsx
app/login/: login-form.tsx  page.tsx
app/map/: page.tsx
app/projects/: new-project-form.tsx  page.tsx
app/review/: page.tsx
app/status/: page.tsx
cli/src/: index.ts
components/map/: ai-query-panel.tsx  basemap-picker.tsx  basemaps.ts  colors.ts  compare-panel.tsx  extract-prompt.tsx  (+7 more)
docs/: ARCHITECTURE.md  CHANGELOG.md  OPERATIONS.md  PHASE1_RUNBOOK.md  RISK_REGISTER.md  ROADMAP.md  TEST_STRATEGY.md
lib/: dashboard.ts  env-doctor.ts  env.ts  pmtiles-publish.ts  pmtiles-readiness.ts  pmtiles.ts  public-env.ts  r2.ts
scripts/: db-migrate.ts  db-seed.ts  env-doctor.ts  hosted-smoke.ts  phase1-gauntlet.ts  pmtiles-generator-smoke.mjs  pmtiles-local-bridge.mjs  pmtiles-public-proof.mjs  public-dashboard-proof.mjs  vercel-env-inventory.mjs
services/extractor/: Dockerfile.cpu  README.md  modal_app.py  pyproject.toml
services/extractor/opengeo_extractor/: __init__.py  app.py  extractor.py  schema.py
services/extractor/scripts/: sync_weights.py
services/extractor/tests/: test_app.py  test_schema.py
supabase/: config.toml
workflows/: orthomosaic-pipeline.ts
(+117 files in other folders)
